<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welcome"
    tools:context=".questions.BudgetQuestion">


    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/budget_question"
        android:textAlignment="center"
        android:textColor="@color/blackish"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/budget_group"
        android:layout_width="wrap_content"
        android:layout_height="257dp"
        android:layout_below="@+id/question_text_view"
        android:layout_centerInParent="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_text_view">

        <RadioButton
            android:id="@+id/price1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:button="@android:drawable/btn_radio"
            android:text="@string/price1"
            android:textSize="28sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/price2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:button="@android:drawable/btn_radio"
            android:text="@string/price2"
            android:textSize="28sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/price3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:button="@android:drawable/btn_radio"
            android:text="@string/price3"
            android:textSize="28sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/price4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:button="@android:drawable/btn_radio"
            android:text="@string/price4"
            android:textSize="28sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/price5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:button="@android:drawable/btn_radio"
            android:text="@string/price5"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RadioGroup>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/budget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget_group" />
</android.support.constraint.ConstraintLayout>